syntax = "proto3";

package auth;

option go_package = "github.com/Uran-235-Games/wog-grpc-protocols/proto/auth/auth;auth";

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
}

message SignUpRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message SignUpResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}

message SignInRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message SignInResponse {
  string token = 1;
  string id = 2;
  string name = 3;
  string email = 4;
}