syntax = "proto3";

package user_service;

// option go_package = "github.com/Uran-235-Games/wog-grpc-protocols/proto/user_service/auth;user_service";
option go_package = "github.com/Uran-235-Games/wog-microservices/user-service/proto";

service UserService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc ValidateJWT(ValidateJWTRequest) returns (ValidateJWTResponse);
}

message ValidateJWTRequest {
  string token = 1;
}

message ValidateJWTResponse {
  string userId = 1;
}

message SignUpRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message SignUpResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}

message SignInRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message SignInResponse {
  string id = 1;
  string token = 2;
  string name = 3;
  string email = 4;
}